# JudgerToTeaching

./: .gitignore  CMakeLists.txt  ProgramController.cpp  ProgramController.h  README.md  clean.sh  config.ini  filter-policy.txt  main  main.cpp  makefile  readme.md
Compiler/: Compiler.cpp  Compiler.h
checker/: AnswerChecker.cpp  AnswerChecker.h
common/: CharsetUtil.cpp  CharsetUtil.h  ConfigurationTool.cpp  ConfigurationTool.h  JudgeConfig.cpp  JudgeConfig.h  Macro.h  Result.cpp  Result.h  Util.cpp  Util.h
compiler/: CCompiler.cpp  CCompiler.h  CXXCompiler.cpp  CXXCompiler.h  Compiler.h
controller/: Pipe3.cpp  Pipe3.h  ProgramController.cpp  ProgramController.h  SeccompRules.cpp  SeccompRules.h  SubProcess.cpp  SubProcess.h  programcontroller.cpp  programcontroller.h  subprocess.cpp  subprocess.h
jni/: com_cqjtu_ets_onlinejudge_jni_JniApplication.h  jnimacro.h
utils/: Data.h  debug.h  util.cpp  util.h
